Fix the window size and overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+ html, body{
+  max-height:100%;
+  margin: 0;
+ }
